# hot-makler-bot

./: .env.example  .gitignore  Dockerfile  SETUP.md  docker-compose.yml  nixpacks.toml  pyproject.toml  railway.json  render_deploy.py
src/bot/: main.py  states.py  texts.py
src/bot/handlers/: __init__.py  contact.py  results.py  search.py  start.py
src/bot/keyboards/: __init__.py  inline.py
src/core/: config.py  models.py  pricing.py  search.py
src/integrations/: scheduler.py  sheets.py  whatsapp.py
src/storage/: db.py  repositories.py
